# model_chromatogram

./: .gitignore  EMG_curvefit.py  README.md  __init__.py  chromatogram.csv  chromatogram.ipynb  chromatogram.py  column_performance_driver.py  column_testing.csv  full_chromatogram.ipynb  full_chromatogram.py  general_parameters.py  injection.json  injection.py  juliapkg.json  main.py  output.csv  output_1.csv  peak_finding.py  peak_list_test.csv  peaks.py  pyproject.toml  sample_test.py  samples.csv  setup.py  stats.prof  system.py  user_parameters.py  view_test_data.py
analysis/: EMG_curvefit.py  peak_finding.py
archive/: chromatogram.py  full_chromatogram.py  gradients.csv  peaks.py
audit_trail/: calibration.csv  calibration_processing.json  convert_calibration_csv_to_json.py  main.py  view_test_data.py
batch_reactor_data/: batch_reaction.py  calibration.csv  convert_calibration_csv_to_json.py  main.py  old.py  speed_test.py
chromatogram/: __init__.py  baseline.py  chromatogram.py  peak_model.py  peakcreator.py
column_testing_examples/: column_performance_driver.py  view_test_data.py
compounds/: 1120-90-7-UVVis.jdx  1663-45-2-UVVis.jdx  69-05-6-UVVis.jdx  __init__.py  compound.py  compound_library.py  compound_spectrum.py  compounds.csv  readme.md  sample.py  solvent.py  solvent_library.py  solvents.csv  swissadme.csv  uv_spectrum.py
data_processing/: __init__.py  baseline.py  peak.py  peak_finder.py  peak_list.py  process_main.py  processing.ipynb  signal_processing.py  test.parquet
docs/: Chromatogram Model.tex  references.bib
methods/: __init__.py  (+6 more)
(+166 files in other folders)
