[tool.poetry]
name = "model-chromatogram"
version = "0.1.0"
description = ""
authors = ["James Klimavicz <42780890+jsklimavicz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "model_chromatogram"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
