[tool.poetry]
name = "model-chromatogram"
version = "0.1.0"
description = ""
authors = ["James Klimavicz <42780890+jsklimavicz@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "model_chromatogram"}]

[tool.poetry.dependencies]
python = "^3.11"
pydash = "^8.0.3"
numpy = "^2.1.0"
scipy = "^1.14.1"
pandas = "^2.2.2"
uuid = "^1.30"
holidays = "^0.56"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
cython = "^3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
